--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zod": "^4.1.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@iconify/react": "^6.0.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query-devtools": "^5.85.3",
@@ -60,6 +61,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.12",
     "typescript": "^5",
+    "vercel": "^47.0.4",
     "webpack": "^5.101.2"
   },
   "prettier": {
