--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,25 @@
 {
-  "name": "Th3-Movies",
-  "short_name": "Th3-Movies",
+  "name": "Th3-Flix",
+  "short_name": "Th3-Flix",
   "description": "Your only choice for a free movies and tv shows streaming website.",
-  "theme_color": "#0D0C0F",
-  "background_color": "#0D0C0F",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "lang": "en-US",
   "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "icons/logo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable monochrome"
+    },
     {
       "type": "image/png",
       "src": "icons/windows/SmallTile.scale-100.png",
@@ -412,32 +423,38 @@
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-512-512.png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-192-192.png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-144-144.png",
-      "sizes": "144x144"
+      "sizes": "144x144",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-96-96.png",
-      "sizes": "96x96"
+      "sizes": "96x96",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-72-72.png",
-      "sizes": "72x72"
+      "sizes": "72x72",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
       "src": "icons/android/android-launchericon-48-48.png",
-      "sizes": "48x48"
+      "sizes": "48x48",
+      "purpose": "any maskable monochrome"
     },
     {
       "type": "image/png",
